--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="gracezhang041@gmail.com">email</a></li>
+        		<li><a href="mailto:gracezhang041@gmail.com">email</a></li>
         		<li><a href="https://github.com/YinghanZhang0410">github.com/YinghanZhang0410</a></li>
 			</ul>
 		</footer>
