--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Yinghan Zhang's Personal Site</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Yinghan Zhang!</h1>
-				<p>I'm a student from University of Toronto, specialized in Applied Statistics. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:gracezhang041@gmail.com">email</a></li>
-        		<li><a href="https://github.com/YinghanZhang0410">github.com/YinghanZhang0410</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Yinghan Zhang
+---
+<div class="blurb">
+	<h1>Hi there, I'm Yinghan!</h1>
+	<p>I'm a student at University of Toronto, specialized in Applied Statistics. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
