--- a/css/project/index.html
+++ b/css/project/index.html
@@ -2,4 +2,13 @@
 layout: default
 title: Yinghan's projects
 ---
-<a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a>.
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Yinghan's Projects</title>
+	</head>
+	<body>
+    <a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a>
+    <a href="https://samlmy.github.io/STA313Final/">STA313</a>
+	</body>
+</html>
