--- a/project/index.html
+++ b/project/index.html
@@ -8,7 +8,7 @@ title: Yinghan's projects
 		<title>Yinghan's Projects</title>
 	</head>
 	<body>
-		<li><a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a><br><li>
-		<li><a href="https://samlmy.github.io/STA313Final/">STA313</a><li>
+		<li><a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a><br></li>
+		<li><a href="https://samlmy.github.io/STA313Final/">STA313</a></li>
 	</body>
 </html>
