--- a/project/index.html
+++ b/project/index.html
@@ -1,12 +1,10 @@
 ---
 layout: default
-title: Yinghan's projects
+title: Yinghan's Blog
 ---
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Yinghan's Projects</title>
-	</head>
+	<h1>{{ page.title }}</h1>
 	<body>
 		<li><a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a></li>
 		<li><a href="https://samlmy.github.io/STA313Final/">STA313</a></li>
