--- a/about/index.html
+++ b/about/index.html
@@ -1,11 +1,8 @@
 ---
 layout: default
+title: Yinghan's Blog
 ---
-<!DOCTYPE html>
-<html>
-    <body>
-
-    <h1>About</h1>
+	<h1>{{ page.title }}</h1>
         <p>I am a third year student at University of Toronto, specializing in Applied Statistics and math. 
           My short-term goal is to be accepted by the graduate school of U of T. 
           I am a cat-lover, and I have a ragdoll, she's the most adorable cat, I love her so much. 
