--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: Yinghan's Blog
           My cat is named Elfie and she is turning one year old this May, 2021. </p>
       
     <h3>Something About Elfie</h3>
-       <img src="https://www.instagram.com/p/CGdseEgnAt8/?igshid=8o0lrxgwpqr9" alt="Elfie" width="203"> 
+       <img src="https://imgur.com/JvFCPtH" alt="Elfie" width="203"> 
 
     </body>
 </html>
