--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,7 @@ title: Yinghan's Blog
           My cat is named Elfie and she is turning one year old this May, 2021. </p>
       
     <h3>Something About Elfie</h3>
+<blockquote class="imgur-embed-pub" lang="en" data-id="JvFCPtH"><a href="https://imgur.com/JvFCPtH">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
        <img src="https://imgur.com/JvFCPtH" alt="Elfie" width="203"> 
 
     </body>
