--- a/about/index.html
+++ b/about/index.html
@@ -5,12 +5,12 @@ title: Yinghan's Blog
 	<h1>{{ page.title }}</h1>
         <p>I am a third year student at University of Toronto, specializing in Applied Statistics and math. 
           My short-term goal is to be accepted by the graduate school of U of T. 
-          I am a cat-lover, and I have a ragdoll, she's the most adorable cat, I love her so much. 
-          My cat is named Elfie and she is turning one year old this May, 2021. </p>
+          I am a cat-lover, and I have a Ragdoll, she's the most adorable cat, I love her so much. </p>
       
     <h3>Something About Elfie</h3>
-<blockquote class="imgur-embed-pub" lang="en" data-id="JvFCPtH"><a href="https://imgur.com/JvFCPtH">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-       <img src="https://imgur.com/JvFCPtH" alt="Elfie" width="203"> 
+	<p> My cat is named Elfie and she is turning one year old this May, 2021.</p>
+<blockquote class="imgur-embed-pub" lang="en" data-id="JvFCPtH"><a href="https://imgur.com/JvFCPtH">
+	View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
     </body>
 </html>
