--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Yinghan's Blog
+title: Something About Myself
 ---
 	<h1>{{ page.title }}</h1>
         <p>I am a third year student at University of Toronto, specializing in Applied Statistics and math. 
