--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Yinghan!</h1>
 				<p>I'm a student at University of Toronto, specialized in Applied Statistics. <a href="/about">Read more about my life...</a></p>
+			<blockquote class="imgur-embed-pub" lang="en" data-id="epbYxqW"><a href="https://imgur.com/epbYxqW">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
