--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,8 @@ title: Something About Myself
 ---
 	<h1>{{ page.title }}</h1>
         <p>I am a third year student at University of Toronto, specializing in Applied Statistics and math. 
-          My short-term goal is to be accepted by the graduate school of U of T. 
+          My short-term goal is to be accepted by the graduate school of U of T. Spring is my favourite season, 
+		not too cold, not too hot, and that's when all the flowers are blooming.
           I am a cat-lover, and I have a Ragdoll, she's the most adorable cat, I love her so much. </p>
       
     <h3>Something About Elfie</h3>
