--- a/project/index.html
+++ b/project/index.html
@@ -6,5 +6,5 @@ title: Yinghan's Project
 	<body>
 		<li><a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a></li>
 		<li><a href="https://samlmy.github.io/STA313Final/">STA313</a></li>
-		<li><a href="https://yinghanzhang0410.github.io/yhz.datavis.genderinjustice/">yhz.datavis.genderinjustice</a></li>
+		<li><a href="https://yinghanzhang0410.github.io/yhz.datavis.genderinjustice/">Datavis</a></li>
 	</body>
