--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,5 @@ title: Yinghan's Project
 	<h1>{{ page.title }}</h1>
 	<body>
 		<li><a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a></li>
-		<li><a href="https://samlmy.github.io/STA313Final/">STA313</a></li>
-		<li><a href="https://yinghanzhang0410.github.io/yhz.datavis.genderinjustice/">Datavis</a></li>
+		<li><a href="https://yinghanzhang0410.github.io/datavis.genderinjustice/">Datavis</a></li>
 	</body>
