--- a/project/index.html
+++ b/project/index.html
@@ -4,6 +4,6 @@ title: Yinghan's Project
 ---
 	<h1>{{ page.title }}</h1>
 	<body>
-		<li><a href="https://yinghan-zhang-final-project.netlify.app/">STA304</a></li>
-		<li><a href="https://yinghanzhang0410.github.io/datavis.genderinjustice/">STA313</a></li>
+		<li><a href="https://yinghan-zhang-final-project.netlify.app/">Investigating the Effect of Television Advertising on Newspaper Price and Content</a></li>
+		<li><a href="https://yinghanzhang0410.github.io/datavis.genderinjustice/">Visualize Gender Injustice at Workplace</a></li>
 	</body>
